quick update to xmas content
Signed-off-by: Andrew Smith <andrew.smith03@adelaide.edu.au>

--- a/xmas.html
+++ b/xmas.html
@@ -179,7 +179,7 @@
 			data-paddingbottom="[0,0,0,0]"
 			data-paddingleft="[0,0,0,0]"
 
-			style="z-index: 9; white-space: normal; font-size: 30px; line-height: 40px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">Add this Free Snow Add-On to any of your Sliders </div>
+			style="z-index: 9; white-space: normal; font-size: 30px; line-height: 40px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">Its snowing</div>
 				</div>
 			</div>
 		</div>
@@ -318,7 +318,7 @@
 			data-paddingbottom="[0,0,0,0]"
 			data-paddingleft="[0,0,0,0]"
 
-			style="z-index: 9; white-space: normal; font-size: 30px; line-height: 40px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">An Effect Add-On for Slider Revolution </div>
+			style="z-index: 9; white-space: normal; font-size: 30px; line-height: 40px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">wow isnt it amazing</div>
 				</div>
 			</div>
 		</div>
@@ -457,7 +457,7 @@
 			data-paddingbottom="[0,0,0,0]"
 			data-paddingleft="[0,0,0,0]"
 
-			style="z-index: 9; white-space: normal; font-size: 30px; line-height: 40px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">All Add-Ons & Templates Free with Slider Revolution </div>
+			style="z-index: 9; white-space: normal; font-size: 30px; line-height: 40px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">It doesnt snow at our place</div>
 				</div>
 			</div>
 		</div>
@@ -488,7 +488,7 @@
 <div style="" class="tp-static-layers">
 
 		<!-- LAYER NR. 16 -->
-		<a class="tp-caption rev-btn  tp-static-layer" 
+		<!-- <a class="tp-caption rev-btn  tp-static-layer" 
  href="https://revolution.themepunch.com/direct-customer-benefits/#addoninstall" target="_blank"			 id="slider-149-layer-18" 
 			 data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" 
 			 data-y="['bottom','bottom','bottom','bottom']" data-voffset="['30','30','30','30']" 
@@ -510,7 +510,7 @@
 			data-paddingbottom="[0,0,0,0]"
 			data-paddingleft="[35,35,35,35]"
 
-			style="z-index: 8; white-space: nowrap; font-size: 15px; line-height: 50px; font-weight: 700; color: rgba(255, 255, 255, 1.00);font-family:Poppins;background-color:rgba(255, 255, 255, 0);border-color:rgba(255, 255, 255, 1.00);border-style:solid;border-width:2px 2px 2px 2px;border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">HOW TO INSTALL? </a>
+			style="z-index: 8; white-space: nowrap; font-size: 15px; line-height: 50px; font-weight: 700; color: rgba(255, 255, 255, 1.00);font-family:Poppins;background-color:rgba(255, 255, 255, 0);border-color:rgba(255, 255, 255, 1.00);border-style:solid;border-width:2px 2px 2px 2px;border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">HOW TO INSTALL? </a> -->
 </div>
 <div class="tp-bannertimer" style="height: 10px; background-color: rgba(255, 255, 255, 0.25);"></div>	</div>
 </div><!-- END REVOLUTION SLIDER -->
